assets/scss/main.scss
@import '_colors';

$light-mode-background-color: $gray-1;
$dark-mode-background-color: #0f172a;
$dark-mode-font-color: #e2e8f0;
$code-font-family:
  ui-monospace,
  SFMono-Regular,
  Menlo,
  Monaco,
  Consolas,
  Liberation Mono,
  Courier New,
  monospace;
$anchor-width: 120px;
$content-anchor-gap: 10px;
$light-mode-border-color: $gray-5;
$dark-mode-border-color: #334155;
$light-mode-code-bg: #f8fafc;
$dark-mode-code-bg: #1e293b;
$dark-mode-tag-bg: #1e293b;
$dark-mode-tag-border: #334155;

html,
body {
  width: 100%;
  height: 100vh;
  padding: 0;
  margin: 0;
}

.demo-button {
  border-radius: 6px;
  padding: 7px 12px;
  margin: 0.5rem;
  background-color: $gray-1;
  border: $gray-5 1px solid;
  cursor: pointer;
  transition: all 0.2s;

  &:hover {
    border: $primary-5 1px solid;
    color: $primary;
  }
}

code {
  font-family: $code-font-family;
}

*::-webkit-scrollbar {
  width: 16px;
  height: 16px;
  background: transparent;
}

*::-webkit-scrollbar-track {
  background: transparent;
}

*::-webkit-scrollbar-thumb {
  border: 6px solid rgba(0, 0, 0, 0);
  background-clip: padding-box;
  border-radius: 8px;
  background-color: rgba(0, 0, 0, 0.45);
}

.dark-mode {
  body {
    background-color: $dark-mode-background-color;
    color: $dark-mode-font-color;
  }

  ul,
  li,
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  p,
  a,
  span:not([class^='hljs'], [class^='ant-tag'], [style^='--shiki']) {
    color: inherit;
    transition: color 0.2s;
  }

  .ant-anchor-link-title {
    color: $gray-2 !important;
  }
  .ant-anchor-link-title-active {
    color: $primary !important;
  }
  *::-webkit-scrollbar-thumb {
    background-clip: padding-box;
    border-radius: 8px;
    background-color: $gray-7;
  }
}

.light-mode {
  * {
    transition: background-color 0.2s;
    transition: color 0.2s;
  }
}

.ant-table-body {
  scrollbar-width: none;
  -ms-overflow-style: none;
}

.ant-table-sticky-scroll .ant-table-sticky-scroll-bar {
  display: none;
}

.ant-menu-title-content {
  margin-left: -15px;
}

.ant-menu-item.ant-menu-item-only-child {
  padding: 0px;
  width: 230px;
  height: 30px;
  font-size: 13px;
  letter-spacing: -0.7px;
  .ant-menu-title-content {
    margin-left: -33px;
  }
}
.ant-menu.ant-menu-root.ant-menu-inline.ant-menu-light {
  min-height: 100vh;
  padding-bottom: 100px;
}

